--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 crispy-bootstrap5==0.6
 Django==3.2.9
 django-allauth==0.41.0
+django-countries==7.2.1
 django-crispy-forms==1.13.0
 oauthlib==3.1.1
 Pillow==8.4.0
